@@ -43,6 +43,7 @@ public class IpTypeTest extends CrateUnitTest {
         };
         for (BytesRef ip : validIps) {
             assertEquals(true, IpType.isValid(ip));
+            assertEquals(true, IpType.isValid(TypeTestUtils.addOffset(ip)));
         }
         BytesRef[] invalidIps = {
                 new BytesRef("192.168.0.2555"),
@@ -72,6 +73,7 @@ public class IpTypeTest extends CrateUnitTest {
         };
         for (BytesRef ip : invalidIps) {
             assertEquals(false, IpType.isValid(ip));
+            assertEquals(false, IpType.isValid(TypeTestUtils.addOffset(ip)));
         }
     }
 
